# Rust-Learnings

./: .gitignore  README.md
0-The-Book/Chapter 12/minigrep/src/: lib.rs  main.rs
0-The-Book/Chapter 4/easy-loop-counter/: easy-loop-counter.rs
0-The-Book/Chapter 5/calculate-area-with-tuples/: Cargo.toml
0-The-Book/Chapter 6/enum-us-states/: Cargo.toml
0-The-Book/calculate-area-with-structs/: Cargo.toml
0-The-Book/calculate-area-with-tuples/src/: main.rs
0-The-Book/control-flow/src/: main.rs
0-The-Book/define-methods/: Cargo.toml
0-The-Book/easy-loop-counter/: Cargo.toml
0-The-Book/guessing_game/src/: main.rs
0-The-Book/ownership-and-functions/src/: main.rs
0-The-Book/slices/src/: main.rs
00-Small-Rust-Applications/0-code-snippets/: Readme.md
00-Small-Rust-Applications/todo-macro-example/: Cargo.toml
00-Small-Rust-Applications/work-roster/: Cargo.toml
00-Small-Rust-Applications/work-roster/src/: employee.rs  main.rs  view.rs  view_model.rs
Code Snippets/: Readme.md
Code Snippets/Syntax & Semantics/control-flow-constructs/: control-flow-constructs.rs
Code Snippets/Syntax & Semantics/functions-methods/: functions-methods.rs
Code Snippets/Syntax & Semantics/variables-constants-data-types/: Cargo.toml
Small Rust Applications/GUI Apps/cup-cost/: Cargo.toml  README.md
Small Rust Applications/GUI Apps/cup-cost/src/: main.rs
Small Rust Applications/GUI Apps/cup-cost/ui/: appwindow.slint
Small Rust Applications/Terminal Apps/retirement-cli/: Cargo.toml  Readme.md
Small Rust Applications/Terminal Apps/work-roster/: README.md
(+13 files in other folders)
