[package]
name = "cup-cost"
version = "0.1.0"
authors = ["Kyle Martin <kyle.martin.0819@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that calculates the cost of home prepared energy mocktail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Cup Cost"
identifier = "io.github.thesnowmanndev.Rust-Learnings"